Update env to all file

--- a/admin-page/.env
+++ b/admin-page/.env
@@ -3,3 +3,5 @@ LOCAL_HOST=http://localhost:3000
 REACT_APP_MONGO_API=http://api.borrowproject01.live/api/mongo
 
 REACT_APP_POSTGRESQL_API=http://api.borrowproject01.live/api/postgres
+
+REACT_APP_API=http://api.borrowproject01.live/api/postgres
